[package]
name = "deno_argon2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
name = "deno_argon2"
crate-type = ["cdylib"]
